# quantized-containerized-models

./: .dockerignore  .pre-commit-config.yaml  .pyre_configuration.local  Makefile  README.md  mkdocs.yml  project_structure_full.txt  pyproject.toml
.github/workflows/: docs.yml  run_benchmark.yml  run_canary.yml  run_cd.yml  run_ci.yml
benchmark/: README.md  utils.py
benchmark/flux_fast_lora_hotswap/: benchmark.py
benchmark/flux_fast_lora_hotswap_img2img/: benchmark.py
benchmark/gemma_torchao/: Technical_Overview.md  benchmark.py
benchmark/phi_4_reasoning_plus_unsloth/: benchmark.py
benchmark/smollm3_pruna/: benchmark.py  benchmark_results.json  output_run_1.txt  output_run_2.txt
docs/: architecture.md  deployment.md  examples.md  index.md  quickstart.md
fast-lora-hotswap-img2img/: cog.yaml  predict.py
flux-fast-lora-hotswap-img2img/: cog.yaml  predict.py
flux.-1-dev-fast-lora-hotswap-img2img/: cog.yaml  predict.py
flux.1-dev/: cog.yaml  predict.py
flux.1-dev-fast-lora-hotswap/: predict.py
flux.1-dev-fast-lora-hotswap/.cog/: openapi_schema.json
flux.1-dev/.cog/: openapi_schema.json
gemma-torchao/: Technical_Overview.md  cog.yaml  output_20250909_174400.txt  output_20250909_175419.txt  output_20250910_172848.txt  predict.py
gemma-torchao/.cog/: openapi_schema.json
gemma-torchao/outputs/: output_20250910_171544_42_pred.txt  output_42_0.txt
gpt-oss-20b-unsloth/: cog.yaml  predict.py
medgemma/: predict.py
modal_utils/: deploy_and_test.py  deployment_replicate.py  deployment_test.py  deployment_tests.py
models/flux-fast-lora-hotswap/: predict.py
models/flux-fast-lora-hotswap-img2img/: predict.py
models/flux_fast_lora_hotswap/: predict.py
models/flux_fast_lora_hotswap/.cog/: openai_schema.json
models/flux_fast_lora_hotswap_img2img/: predict.py
models/gemma_torchao/: predict.py
models/gemma_torchao/.cog/: openapi_schema.json
models/phi-4-reasoning-plus-unsloth/: predict.py
models/smollm3-3b-pruna/: cog.yaml  predict.py
phi-4-reasoning-plus-unsloth/: cog.yaml  predict.py  requirements.txt
phi-4-reasoning-plus-unsloth/.cog/: openapi_schema.json
phi-4-unsloth/: cog.yaml  predict.py
phi-4-unsloth/.cog/: openapi_schema.json
sana-600M/: cog.yaml  predict.py
scripts/: get_deployed_version.py  resolve_stable_models.py  validate_stable_and_candidate.py
smollm/: cog.yaml  predict.py
smollm/.cog/: openapi_schema.json
smollm3-3b-pruna/: cog.yaml  predict.py
src/models/flux_fast_lora_hotswap/: cog.yaml  predict.py
src/models/flux_fast_lora_hotswap/.cog/: openai_schema.json  openapi_schema.json
src/models/flux_fast_lora_hotswap_img2img/: cog.yaml  predict.py
src/models/flux_fast_lora_hotswap_img2img/.cog/: openapi_schema.json
src/models/gemma_torchao/: cog.yaml  predict.py
src/models/gemma_torchao/.cog/: openapi_schema.json
src/models/gemma_torchao/outputs/: output_20250910_172848.txt  output_42_0.txt
src/models/phi4_reasoning_plus_unsloth/: cog.yaml  predict.py
src/models/phi4_reasoning_plus_unsloth/.cog/: openapi_schema.json
src/models/phi_4_reasoning_plus_unsloth/: predict.py
src/models/smollm3_pruna/: cog.yaml  predict.py
src/models/smollm3_pruna/.cog/: openapi_schema.json
tests/: README.md  confest.py  conftest.py  test_flux-fast-lora-hotswap-img2img.py  test_flux_fast_lora_hotswap.py  test_flux_fast_lora_hotswap_img2img.py  test_phi-4-reasoning-plus-unsloth.py
tests/canary/: test_flux_fast_lora_hotswap_canary.py  test_flux_fast_lora_hotswap_img2img_canary.py  test_gemma_torchao_canary.py  test_phi4_reasoning_plus_unsloth_canary.py  test_smollm3_pruna_canary.py  utils.py
tests/deployment/: test_flux_fast_lora_hotswap_deployment.py  test_flux_fast_lora_hotswap_img2img_deployment.py  test_gemma_torchao_deployment.py  test_phi4_reasoning_plus_unsloth_deployment.py  test_smollm3_pruna_deployment.py
tests/integration/: test_flux_fast_lora_hotswap_img2img_integration.py  test_flux_fast_lora_hotswap_integration.py  test_gemma_torchao_integration.py  test_phi_4_reasoning_plus_unsloth_integration.py  test_smollm3_pruna_integration.py  utils.py
tests/unit/: test_all_utils.py  test_flux_fast_lora_hotswap.py  test_flux_fast_lora_hotswap_img2img.py  test_gemma_torchao.py  test_phi4_reasoning_plus_unsloth.py  test_phi_4_reasoning_plus_unsloth.py  test_smollm3_pruna.py  test_smollm_3_pruna.py
voxtral/: cog.yaml  predict.py
